frontend/test/should_pass/computations_while.grg
foo() : int
{
	def var res:int = 42;
	while(res > 1) {
		res = res - 1;
	}
	return(res);
}

test t : (int)
{
	def var res:int = 42;
	
	independent {
		yield {
			while(res > 1) {
				yield res = res - 1;
			}
		}
	}
	
	return (res);
}

rule r : (int)
{	
	modify {
		def var res:int = 42;
		
		eval { 
			while(res > 1) {
				yield res = res - 1;
			}
		}
		
		return (res);
	}
}
