frontend/test/should_fail/computations_decl_use_calls_arguments_mismatch_007.grg
proc(var b:boolean) : (boolean)
{
	return(b);
}

call()
{
	def var b:boolean;
	(b,b) = proc(b);
	return;
}
